# myvim-a-vim-like-text-editor-

./: CMakeLists.txt  a.out
includes/: buffer.h  commands.h  editor_types.h  file_manager.h  macros.h  modes.h  render_config.h  screen.h  terminal.h  windows.h
src/: buffer.c  commands.c  file_manager.c  main.c  modes.c  screen.c  terminal.c  windows.c
src/control/: commands.c  insert_mode.c  normal_mode.c
src/render/: render_config.c  screen.c
src/text_buffer/: macros.c
src/windows/: windows.c
